@@ -1,3 +1,7 @@
+2003-07-05  Dave Peticolas  <dave@krondo.com>
+
+	* twisted/test/test_enterprise.py: more tests. Add mysql test.
+
 2003-07-05  Itamar Shtull-Trauring  <itamar@itamarst.org>
 
 	* twisted/web/soap.py: Now requires SOAPpy v0.10.1, allow subclasses
